src/test/test-models/bad/lang/bad8.stan
data {
   real y;
}
model {
    y = 10.0;
}